[package]
name = "dfr0299"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/sciguy16/dfr0299-rs"

[features]
std = ["num_enum/std"]
use_defmt = ["dep:defmt"]

[dependencies]
num_enum = { version = "0.5", default_features = false }

# feature = use_defmt
defmt = { version = "0.3", optional = true }

[dev-dependencies]
pretty_assertions = "1"
